fixed white space in lang gallery for Edge

--- a/index.css
+++ b/index.css
@@ -132,7 +132,7 @@ body {
   #language-gallery {
     display: inline-block;
     width: 100%;
-    height: 300px;
+    height: 100%;
     background-image: linear-gradient(rgb(255, 77, 32), #e9a136);
     font-size: 24px;
     padding: 40px 0;
